# miratope-rs

./: Cargo.toml  Gap.off  Gogishi.off  LICENSE  README.md  Seside_du.off  Sirsid.off
.github/workflows/: quickstart.yaml  quickstart.yml
lib/: .folder  Firp.off  Firp_du.off  Gike.off  utahteapot.off
lib/0D/: .folder
lib/1/: .folder  Icosahedron.off  Tetrahedron.off
lib/1. Platonic solids/: .metadata  Cube.off  Dodecahedron.off  Octahedron.off
lib/1D/: .folder  Dyad.off
lib/2D/: .folder  .name
lib/3D/: .folder
lib/3D/other/: .folder
lib/3D/regular/: .folder
lib/3D/rf/: Augmented sphenocorona.off  Augmented truncated cube.off  Biaugmented truncated cube.off  Diminished rhombicosidodecahedron.off  Disphenocingulum.off  Elongated pentagonal pyramid.off  Elongated square bipyramid.off  Elongated square pyramid.off  Elongated triangular bipyramid.off  Elongated triangular pyramid.off  Gyrobifastigium.off  Gyroelongated pentagonal pyramid.off  Gyroelongated pentagonal rotunda.off  Gyroelongated square bipyramid.off  Gyroelongated square pyramid.off  Hebesphenomegacorona.off  Metabidiminished rhombicosidodecahedron.off  Parabidiminished rhombicosidodecahedron.off  Pentagonal bipyramid.off  Pentagonal cupola.off  Pentagonal pyramid.off  Pentagonal rotunda.off  Snub disphenoid.off  Snub square antiprism.off  Sphenocorona.off  Sphenomegacorona.off  Square cupola.off  Square pyramid.off  Triangular bipyramid.off  Triangular cupola.off  Triangular hebesphenorotunda.off  Tridiminished rhombicosidodecahedron.off
lib/3D/uniform/: .folder
lib/4D/: .folder
lib/4D/convex uniform/: .folder  Bitruncated hecatonicosachoron.off  Bitruncated tesseract.off  Cantellated hexacosichoron.off  Cantellated icositetrachoron.off  Cantellated pentachoron.off  Cantitruncated hecatonicosachoron.off  Cantitruncated hexacosichoron.off  Cantitruncated icositetrachoron.off  Cantitruncated pentachoron.off  Rectified hecatonicosachoron.off  Rectified pentachoron.off  Rectified tesseract.off  Runcinated tesseract.off  Runcitruncated hexadecachoron.off  Runcitruncated icositetrachoron.off  Runcitruncated pentachoron.off  Truncated hexacosichoron.off
lib/4D/nonconvex uniform/: .folder  Bitruncated great grand stellated hecatonicosachoron.off  Bitruncated icosahedral hecatonicosachoron.off  Cantellated grand hexacosichoron.off  Cantellated icosahedral hecatonicosachoron.off  Cantellated stellated hecatonicosachoron.off  Cantitruncated grand hexacosichoron.off  Quasicantellated icositetrachoron.off  Quasicantellated tesseract.off  Quasicantitruncated tesseract.off  Quasiomnitruncated icositetrachoron.off  Quasiomnitruncated tesseract.off  Quasiruncicantellated tesseract.off  Quasiruncinated icositetrachoron.off  Quasiruncinated tesseract.off  Quasitruncated tesseract.off  Rectified grand hecatonicosachoron.off  Rectified great hecatonicosachoron.off  Rectified great icosahedral hecatonicosachoron.off  Rectified great stellated hecatonicosachoron.off  Rectified icosahedral hecatonicosachoron.off  Rectified stellated hecatonicosachoron.off  Runcinated great grand stellated hecatonicosachoron.off  Truncated grand hexacosichoron.off
lib/4D/regular/: .folder  .name  Gax.off  Grand hecatonicosachoron.off  Grand stellated hecatonicosachoron.off  Great grand hecatonicosachoron.off  Great icosahedral hecatonicosachoron.off  Great stellated hecatonicosachoron.off  Icosahedral hecatonicosachoron.off  Stellated hecatonicosachoron.off
lib/4D/uniform/: .folder  .name  Cantellated tesseract.off  Cantitruncated tesseract.off  Grand antiprism.off  Omnitruncated icositetrachoron.off  Omnitruncated tesseract.off  Runcitruncated hecatonicosachoron.off  Runcitruncated hexacosichoron.off  Runcitruncated tesseract.off  Semisnub icositetrachoron.off  Truncated hexadecachoron.off  Truncated pentachoron.off
lib/5D/: .folder
lib/5D/Uniform/: .folder  Bicantellated hexateron.off  Bicantellated penteract.off  Bicantitruncated penteract.off  Bitruncated demipenteract.off  Bitruncated hexateron.off  Bitruncated triacontaditeron.off  Penteract.off  (+30 more)
lib/generic/: .folder  .name
miratope-core/: Cargo.toml
miratope-core/src/: float.rs  geometry.rs  lib.rs  vec_like.rs
miratope-core/src/abs/: antiprism.rs  elements.rs  flag.rs  mod.rs  product.rs  rank.rs  ranked.rs  valid.rs
miratope-core/src/abstract/: elements.rs  flag.rs  mod.rs  rank.rs
miratope-core/src/conc/: cycle.rs  element_types.rs  element_types_old.rs  faceting.rs  mod.rs  symmetry.rs
miratope-core/src/conc/file/: ggb.rs  mod.rs  off.rs
miratope-core/src/concrete/: cycle.rs  element_types.rs  mod.rs
miratope-core/src/concrete/file/: ggb.rs  off.rs  pen.off  so.off
miratope-core/src/cox/: cd.rs  mod.rs  parse.rs
miratope-core/src/file/: ggb.rs  mod.rs  off.rs
miratope-core/src/file/off/: comments.off  dyad.off  hig.off  mod.rs  pen.off  point.off  shig.off  so.off  tet.off
miratope-core/src/group/: cd.rs  cyclic.rs  gen_iter.rs  group_item.rs  mod.rs  pairs.rs  permutation.rs
miratope-core/src/lang/: dbg.rs  en.rs  es.rs  fr.rs  ja.rs  mod.rs  name.rs  pii.rs
miratope-lang/: Cargo.toml
miratope-lang/src/: gender.rs  lib.rs  name.rs  options.rs  poly.rs
miratope-lang/src/lang/: de.rs  en.rs  es.rs  ja.rs  mod.rs
miratope-lang/src/poly/: abs.rs  conc.rs  mod.rs
src/: default.off  element_vec.rs  geometry.rs  input.rs  main.rs  mesh.rs  vec_like.rs
src/abs/: mod.rs  ranked_poset.rs
src/lang/: dbg.rs  en.rs  es.rs  fr.rs  ja.rs  mod.rs  name.rs  pii.rs
src/no_cull_pipeline/: forward.frag  forward.vert  mod.rs
src/polytope/: cd.rs  convex.rs  convex_plus.rs  cox.rs  cross_section.rs  flag.rs  geometry.rs  ggb.rs  group.rs  mod.rs  off.rs  rank.rs  ranked_poset.rs  shapes.rs  slice.rs
src/translation/: mod.rs  name.rs
src/ui/: camera.rs  config.rs  egui_windows.rs  input.rs  library.rs  main_window.rs  memory.rs  mod.rs  operations.rs  right_panel.rs  top_panel.rs  wiki.rs  window.rs  windows.rs
vec-like/: Cargo.toml
vec-like/src/: lib.rs
(+121 files in other folders)
