[package]
name = "miratope"
description = "A polytope renderer and builder."
license = "MIT"
version = "0.1.0"
repository = "https://github.com/vihdzp/miratope-rs"
keywords = ["polytope", "dimension", "geometry"]
authors = [
    "Violeta Hernández <vi.hdz.p@gmail.com>",
    "Grayson Burton <ocornoc@protonmail.com>",
    "Roman Salinas <ultraroman01@gmail.com>"
]
edition = "2018"

[profile.release]
lto = "thin"
incremental = true
