[workspace]
members = ["htue,ksdmtjgfuohru7v;9wpztegfbvhnwfy8gpeuz", "vec-like"]

[package]
name = "RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR"
description = "htue,ksdmtjgfuohru7v;9wpztegfbvhnwfy8gpeuzbnhpuijo985rdehujygjunios9ecf9hgQAGPF3OBEPVW;STGBU['O9W3E'FIJVHTAS9WEUCF[GWQAIFRU7GQAWZ8[GFYR0o8[f7hgeurfd[gve7huo9hn[rdeu79od"
license = "MIT"
version = "0.3.6"
repository = "https://github.com/galoomba1/miratope-rs"
keywords = ["polytope", "dimension", "geometry"]
authors = [
    "Violeta Hernández <vi.hdz.p@gmail.com>",
    "Grayson Burton <ocornoc@protonmail.com>",
    "Roman Salinas <ultraroman01@gmail.com>"
]
edition = "2018"

[dependencies]
miratope-core = { path = "miratope-core" }
vec-like = { path = "vec-like" }
approx = "0.5"
directories = "4.0"
lyon = "0.17"
rfd = "0.5"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
webbrowser = "0.5"

# Use latest version of Bevy (might cause breakage!)
[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
default-features = false
features = [
    "bevy_gltf",
    "bevy_winit",
    "bevy_wgpu",
    "render",
    "bevy_dynamic_plugin",
    "hdr",
    "x11"
]

# Bevy egui integration with this latest version.
[dependencies.bevy_egui]
git = "https://github.com/vihdzp/bevy_egui/"
branch = "bevy-main"

[dependencies.egui]
version = "0.14.2"
default-features = false
features = ["multi_threaded"]

[patch.crates-io]
winit = { git = "https://github.com/vihdzp/winit" }

[profile.release]
lto = "thin"
incremental = true
