[package]
name = "miratope-core"
version = "0.3.6"
edition = "2018"

[dependencies]
vec-like = { path = "../vec-like" }
approx = "0.5"
dyn-clone = "1.0"
gcd = "2.0"
itertools = "0.10"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
ordered-float = "2.4"
partitions = "0.2.4"
petgraph = "0.6"
rayon = "1.5"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
strum = "0.21"
strum_macros = "0.21"
unchecked_unwrap = "3"
xml-rs = "0.8"
zip = "0.5"
