[package]
name = "miratope-lang"
version = "0.1.0"
edition = "2018"

[dependencies]
miratope-core = { path = "../miratope-core" }
vec-like = { path = "../vec-like" }
nalgebra = { git = "https://github.com/dimforge/nalgebra", branch = "dev", version = "0.27", features = [
    "serde-serialize"
] }
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
strum = "0.21"
strum_macros = "0.21"
